chore: update workflow

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: "16"
 
       - name: Sort
-        run: node sort.js
+        run: node ./sort.js
 
       - name: Prettify
         uses: creyD/prettier_action@v4.0
