--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -37,4 +37,4 @@ jobs:
           source-repo: git@github.com:MillCloud/glossary-json.git
           destination-repo: git@gitee.com:MillCloud/glossary-json.git
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.RSA_PRIVATE_KEY }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
