--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,4 +1,3 @@
-# https://vuepress.github.io/zh/guide/deployment.html#github-pages
 name: sync
 
 on:
@@ -11,28 +10,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
         with:
-          ref: ${{ github.head_ref }}
-          fetch-depth: 0
-
-      - name: Setup Node
-        uses: actions/setup-node@v2
+          version: 7
+      - uses: actions/setup-node@v2
         with:
-          node-version: "16"
-
-      - name: Format
-        run: node ./format.js
-
-      - name: Prettify
-        uses: creyD/prettier_action@v4.0
+          node-version: 16
+          cache: pnpm
+      - run: pnpm install tsx -g
+      - run: tsx ./format.mts
+      - uses: creyD/prettier_action@v4.0
         with:
           prettier_options: ./*.json -w --loglevel=warn
           same_commit: true
-
-      - name: Sync to Gitee
-        uses: wearerequired/git-mirror-action@master
+      - uses: wearerequired/git-mirror-action@master
         with:
           source-repo: git@github.com:MillCloud/glossary-json.git
           destination-repo: git@gitee.com:MillCloud/glossary-json.git
