--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -11,15 +11,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 7
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-          cache: pnpm
-      - run: pnpm install tsx -g
-      - run: tsx ./format.mts
+      - run: node ./format.js
       - uses: creyD/prettier_action@v4.0
         with:
           prettier_options: ./*.json -w --loglevel=warn
